*1.0.4* (19th April, 2005)

* Fixed that in some circumstances controllers outside of modules may have hidden ones inside modules. For example, admin/content might have been hidden by /content. #1075 [Nicholas Seckar]

* Fixed inflection of perspectives and similar words #1045 [thijs@vandervossen.net]

* Added Fixnum#even? and Fixnum#odd?

* Fixed problem with classes being required twice. Object#const_missing now uses require_dependency to load files. It used to use require_or_load which would cause models to be loaded twice, which was not good for validations and other class methods #971 [Nicholas Seckar]


*1.0.3* (27th March, 2005)

* Fixed Inflector.pluralize to handle capitalized words #932 [bitsweat]

* Added Object#suppress which allows you to make a saner choice around with exceptions to swallow #980. Example:

    suppress(ZeroDivisionError) { 1/0 }
  
  ...instead of:
  
    1/0 rescue nil # BAD, EVIL, DIRTY.


*1.0.2* (22th March, 2005)

* Added Kernel#returning -- a Ruby-ized realization of the K combinator, courtesy of Mikael Brockman.

    def foo
      returning values = [] do
        values << 'bar'
        values << 'baz'
      end
    end
    
    foo # => ['bar', 'baz']


*1.0.1* (7th March, 2005)

* Fixed Hash#indifferent_access to also deal with include? and fetch and nested hashes #726 [Nicholas Seckar]

* Added Object#blank? -- see http://redhanded.hobix.com/inspect/objectBlank.html #783 [_why the lucky stiff]

* Added inflection rules for "sh" words, like "wish" and "fish" #755 [phillip@pjbsoftware.com]

* Fixed an exception when using Ajax based requests from Safari because Safari appends a \000 to the post body. Symbols can't have \000 in them so indifferent access would throw an exception in the constructor. Indifferent hashes now use strings internally instead. #746 [Tobias Luetke]

* Added String#to_time and String#to_date for wrapping ParseDate


*1.0.0* (24th February, 2005)
